<resources>
    <string name="app_name">Autopilot</string>
    <string name="connect_bt">Connect bluetooth</string>
    <string name="menu_auto">auto</string>
    <string name="menu_manual">manual</string>
    <string name="menu_settings">settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bearing">Bearing:</string>
    <string name="target">Target:</string>
    <string name="apply">Apply</string>
    <string name="sensitivity">Sensitivity:</string>
    <string name="compass">compass</string>

    <string name="action_settings">Settings</string>

    <string name="compass_dial" translatable="false">Compass Dial</string>
    <string name="compass_hands" translatable="false">Compass Hands</string>

    <string name="sotw_north">N</string>
    <string name="sotw_east">E</string>
    <string name="sotw_south">S</string>
    <string name="sotw_west">W</string>
    <string name="sotw_northeast">NE</string>
    <string name="sotw_northwest">NW</string>
    <string name="sotw_southeast">SE</string>
    <string name="sotw_southwest">SW</string>
    <string name="left">LEFT</string>
    <string name="right">RIGHT</string>
</resources>