<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".fragments.compass.CompassFragmentAbstract">

    <View
        android:id="@+id/anchor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="false" />
    <TextView
        android:id="@+id/tv_target_bearing_label_compass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/anchor"
        android:layout_marginTop="40dp"
        android:gravity="top|left"
        android:text="@string/target"
        android:textSize="25sp" />
    <Button
        android:id="@+id/button_apply_compass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/anchor"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@+id/edit_target_bearing_compass"
        android:text="@string/apply" />

    <TextView
        android:id="@+id/tv_sensitivity_compass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/anchor"
        android:layout_marginTop="104dp"
        android:gravity="left"
        android:text="@string/sensitivity"
        android:textSize="25sp" />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_sensitivity_compass"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/anchor"
        android:layout_marginStart="55dp"
        android:layout_marginTop="98dp"
        android:layout_toEndOf="@+id/tv_target_bearing_label_compass"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center" />
    <Button
        android:id="@+id/button_apply_sensitivity_compass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/anchor"
        android:layout_marginStart="25dp"
        android:layout_marginTop="104dp"
        android:layout_toEndOf="@+id/edit_target_bearing_compass"
        android:text="@string/apply" />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_target_bearing_compass"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/anchor"
        android:layout_marginStart="22dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@+id/tv_target_bearing_label_compass"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/main_image_dial"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:contentDescription="@string/compass_dial"
        android:src="@drawable/dial" />

    <ImageView
        android:id="@+id/main_image_hands"
        android:layout_width="20dp"
        android:layout_height="180dp"
        android:layout_alignTop="@id/main_image_dial"
        android:layout_alignBottom="@id/main_image_dial"
        android:layout_centerInParent="true"
        android:contentDescription="@string/compass_hands"
        android:scaleType="fitXY"
        android:src="@drawable/hands" />

    <TextView
        android:id="@+id/sotw_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>